<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/app_logo"
        android:layout_marginTop="30dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/edt_background"
        android:paddingStart="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>




    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edt_email"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/edt_background"
        android:paddingStart="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:id="@+id/edt_password_again"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edt_password"
        android:layout_marginTop="10dp"
        android:hint="@string/password_again"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:background="@drawable/edt_background"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_password_again"
        android:layout_centerHorizontal="true"
        android:gravity="center">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/btn_goto_signup"
            android:background="@drawable/btn_white"
            android:text="@string/log_in"
            android:textColor="@color/bkk_purple"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btn_goto_signup"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_purple"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </RelativeLayout>

</RelativeLayout>