<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textHome"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <ImageView
            android:id="@+id/bkk_log"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"/>


        <EditText
            android:id="@+id/edt_from"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edt_background"
            android:hint="@string/from"
            android:inputType="text"
            android:paddingStart="15dp"
            app:layout_constraintBaseline_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bkk_log"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/edt_to"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/edt_background"
            android:hint="@string/to"
            android:inputType="text"
            android:paddingStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_from"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/transport"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/edt_background"
            android:hint="@string/route_id"
            android:inputType="text"
            android:paddingStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_to"
            tools:ignore="RtlSymmetry" />
        <LinearLayout
            android:id="@+id/text_date_time"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:paddingStart="80dp"
            android:paddingEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transport">

            <TextView
                android:id="@+id/text_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="40dp"
                android:background="@color/white"
                android:layout_marginStart="25dp"
                android:text="--:--"
                android:textSize="20sp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/text_date"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="40dp"
                android:background="@color/white"
                android:text="MM-DD"
                android:layout_marginStart="25dp"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/icon_date_time"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_date_time">

            <ImageButton
                android:id="@+id/get_time"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="40dp"
                android:background="@color/white"
                android:contentDescription="@string/choose_time"
                android:src="@drawable/time" />

            <ImageButton
                android:id="@+id/get_date"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:background="@color/white"
                android:contentDescription="@string/choose_date"
                android:src="@drawable/calendar" />
        </LinearLayout>

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/btn_purple"
            android:drawableEnd="@drawable/search"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/search"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/icon_date_time" />
    </androidx.constraintlayout.widget.ConstraintLayout>
