<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dp"
    tools:context=".ui.account.AccountFragment">



    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edt_background"
        android:backgroundTint="@color/bkk_purple"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/new_pass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edt_background"
        android:hint="@string/new_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:padding="5dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/new_pass_again"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edt_background"
        android:hint="@string/new_password_again"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:padding="5dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_pass"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/old_pass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edt_background"
        android:hint="@string/old_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:padding="5dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_pass_again"
        tools:ignore="RtlSymmetry" />

    <RelativeLayout
        android:id="@+id/relative_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/old_pass">

        <Button
            android:id="@+id/modify_pass"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="200dp"
            android:background="@drawable/btn_purple"
            android:text="@string/modify"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/delete_acc"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="200dp"
            android:background="@drawable/btn_purple"
            android:backgroundTint="@color/red"
            android:src="@drawable/delete" />



    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>